# boxsh

./: .gitignore  CMakeLists.txt  README.md  install.sh
.github/workflows/: build.sh  ci.yml
docs/: analysis-cow-consistency.md  usage.md
sdk/js/: README.md  package.json
sdk/js/src/: changes.mjs  client.mjs  index.d.ts  index.mjs
sdk/js/test/: all.test.mjs  helpers.mjs  session.test.mjs  terminal.test.mjs
sdk/py/: README.md  pyproject.toml
sdk/py/src/boxsh_py/: __init__.py  changes.py  client.py
sdk/py/tests/: common.py  test_client.py  test_helpers.py  test_overlay.py  test_sdk.py  test_terminal.py
src/: file_type.cpp  io_utils.cpp  io_utils.h  main.cpp  rpc.cpp  rpc.h  sandbox.cpp  sandbox.h  sandbox_darwin.cpp  terminal.cpp  terminal.h  worker_pool.cpp  worker_pool.h
tests/: concurrent.test.mjs  docker-test.sh  docker.test.mjs  file-type.test.mjs  helpers.mjs  index.test.mjs  mcp.test.mjs  overlay.test.mjs  power-sandbox.test.mjs  power_probe_darwin.c  protocol-regression.test.mjs  rpc-basics.test.mjs  rpc-shell-features.test.mjs  sandbox-escape.test.mjs  sandbox-security.test.mjs  shell-mode.test.mjs  terminal-sandbox.test.mjs  terminal.test.mjs  timeout.test.mjs  tools.test.mjs  try.test.mjs  utf8-crash.test.mjs  worker-pool.test.mjs
tests/fixture/: CRED01.DOT  Perspective Block Diagram.vsd  XFUNCH_U.VSS  XOFF.PUB  ZMSPUB.PUB  fixture-win95.reg  other.txt  sample1.doc  sample1.ppt  sample1.xls
