[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "boxsh-py"
version = "2.1.0"
description = "Python SDK for boxsh - sandboxed shell execution with overlay copy-on-write and JSON-RPC"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "xicilion" }]
keywords = ["boxsh", "sandbox", "shell", "overlayfs", "rpc", "isolation"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Shells",
]

[project.urls]
Homepage = "https://github.com/xicilion/boxsh#readme"
Repository = "https://github.com/xicilion/boxsh"
Issues = "https://github.com/xicilion/boxsh/issues"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]